<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="parse_app_id">5hgFCcYl3Lb5pA5vMB1yv9zSdYWqbh3LC22Xjbdd</string>
    <string name="parse_client_key">YO53ftrMhbslFX3i3BAW1rtogC5PnrZXj0fGBFaU</string>
    <string name="facebook_app_id">1429721627316448</string>
    <string name="twitter_consumer_key">ttmf9tMOfP8Kn0ipkTxeqnQQ0</string>
    <string name="twitter_consumer_secret">Xn4PuebKG03fEl9OZ6sDzElmtKC9kpxbyeUOfdS9fS0MkB5aci</string>

    <string name="app_name">MyWorship</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="reenter_password">Re-Enter Password</string>
    <string name="email_signup">E-Mail for Recovery</string>
    <string name="phone_signup">Phone (optional)</string>

    <!-- Pick church fragment values -->
    <string name="pick_church_title">Select Your Church</string>

    <string-array name="churches_array">
        <item>Friedens - Kenosha</item>
        <item>Our Savior - Oshtemo</item>
        <item>Foo - Foo City</item>
    </string-array>

</resources>
